# llama3-inference

./: .gitignore  .python-version  ARCHITECTURE.md  BENCH_INFER_CHANGES.md  CLEANUP_SUMMARY.md  COMPLETE_6_STREAM_OVERLAP_DIAGRAM.md  CUDA_STREAM_VERSION_COMPARISON.md  DEVICE_CONSISTENCY.md  EMBEDDING_OUTPUT_ALIGNMENT.md  FINAL_SOLUTION.md  GROUP_BARRIER_IMPLEMENTATION.md  HISTORY1_BLOCKING_ANALYSIS.md  IO_COMPUTE_OVERLAP_ANALYSIS.md  LAYER_SYNC_PATTERN.md  Llama3.2-1B_kv_profile.json  MEMORY_FRAGMENTATION_GUIDE.md  MULTI_STREAM_OVERLAP_ANALYSIS.md  NSIGHT_ANALYSIS_README.md  QUICK_FIX_GPU_IDLE.md  QUICK_START_BENCH.md  README.md  RING_WINDOW_CONFIG_GUIDE.md  ROLLING_WINDOW_USAGE.md  SYNC_FLOW_DIAGRAM.md  SYNC_IMPLEMENTATION_SUMMARY.md  SYSTEM_ARCHITECTURE_3COMPONENTS.md  WHY_ASYNC_SLOWER_ANALYSIS.md  WSM_ANALYSIS.md  analyze_layer_timings.py  analyze_nsys_report.py  analyze_old_data.py  analyze_overlap_feasibility.py  bench_infer.py  bench_results.json  benchmark_fs_vs_raw_loading.py  benchmark_layer_timings.py  benchmark_mha_ffn_results.txt  benchmark_mha_ffn_separate.py  benchmark_mha_ffn_summary.md  benchmark_results.txt  (+91 more)
llama3/: SSDBacked.py  __init__.py  config.py  generator.py  global_state_example.py  global_state_tracker.py  gpu_utils.py  hbm_slab.py  kv_offload.py  layers.py  memory_manager.py  model.py  raw_param_store.py  raw_param_store_improved.py  registered_pool.py  stream_mnt.py  testtt.py  weight_lbt.py  weight_streaming_manager.py  weights_io_ssd&dram.py  weights_io_ssd_dram.py
llama3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+17 files in other folders)
