[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama3"
version = "0.1.0"
description = "Minimal projectized LLaMA-3 inference"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.3",
    "transformers>=4.41",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llama3*"]
